--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-schedule-tz": "^1.2.1-4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "short-uuid": "^5.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
