--- a/package.json
+++ b/package.json
@@ -39,7 +39,18 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/mongoose": "^10.0.6",
+    "axios": "^1.7.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cloudinary": "^2.2.0",
+    "https": "^1.0.0",
+    "imap": "^0.8.19",
+    "mongoose": "^8.4.3",
+    "node-fetch": "^2.7.0",
+    "telegram": "^2.23.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
