--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
-    "commonService": "github:shruthie1/CommonTgService.git#main",
+    "commonService": "github:shruthie1/CommonTgService.git#master",
     "node-schedule-tz": "^1.2.1-4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
