--- a/package.json
+++ b/package.json
@@ -42,10 +42,9 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cloudinary": "2.0.3",
-    "commonService": "github:shruthie1/CommonTgService.git#dist",
+    "commonService": "github:shruthie1/CommonTgService.git#master",
     "https": "1.0.0",
     "imap": "0.8.19",
-    "libphonenumber-js": "1.10.58",
     "mongoose": "8.2.2",
     "node-fetch": "2.7.0",
     "node-schedule-tz": "^1.2.1-4",
