--- a/package.json
+++ b/package.json
@@ -27,56 +27,58 @@
     "compile-dev": "npm run webpack-dev",
     "build:webpack": "npm i && npm run webpack",
     "upload-cloudinary": "node upload-build.js",
-    "start:node": "node  --max-old-space-size=8192 ./out/index.js"
+    "start:node": "node  --max-old-space-size=8192 ./out/index.js",
+    "update-common": "rm -rf node_modules/commonService && npm install github:shruthie1/CommonTgService.git#dist --no-package-lock --no-save"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/common": "10.3.3",
+    "@nestjs/config": "3.2.0",
+    "@nestjs/core": "10.3.3",
+    "@nestjs/mongoose": "10.0.4",
+    "@nestjs/platform-express": "10.3.3",
+    "@nestjs/swagger": "8.0.0",
+    "adm-zip": "0.5.12",
+    "axios": "1.6.8",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "cloudinary": "2.0.3",
     "commonService": "github:shruthie1/CommonTgService.git#master",
+    "https": "1.0.0",
+    "imap": "0.8.19",
+    "mongoose": "8.2.2",
+    "node-fetch": "2.7.0",
     "node-schedule-tz": "^1.2.1-4",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "@nestjs/config": "^3.2.2",
-    "@nestjs/mongoose": "^10.0.6",
-    "axios": "^1.7.2",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "cloudinary": "^2.2.0",
-    "https": "^1.0.0",
-    "imap": "^0.8.19",
-    "mongoose": "^8.4.3",
-    "node-fetch": "^2.7.0",
-    "telegram": "^2.23.10"
+    "rxjs": "7.8.1",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "5.0.0",
+    "telegram": "2.19.10"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
+    "@nestjs/cli": "10.4.0",
+    "@nestjs/schematics": "10.1.1",
+    "@nestjs/testing": "10.3.3",
+    "@types/express": "4.17.21",
+    "@types/imap": "0.8.40",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.11.28",
+    "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "jest": "29.7.0",
+    "prettier": "3.2.5",
+    "source-map-support": "0.5.21",
+    "supertest": "6.3.4",
+    "ts-jest": "29.1.2",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.4.2",
+    "webpack": "5.90.3",
+    "webpack-cli": "5.1.4",
+    "webpack-node-externals": "3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
