--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cloudinary": "2.0.3",
-    "commonService": "github:shruthie1/CommonTgService.git#master",
+    "common-tg-service": "^1.0.2",
     "https": "1.0.0",
     "imap": "0.8.19",
     "mongoose": "8.2.2",
