--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "@nestjs/platform-express": "10.3.3",
     "@nestjs/swagger": "8.0.0",
     "adm-zip": "0.5.12",
-    "axios": "1.6.8",
+    "axios": "^1.8.4",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cloudinary": "2.0.3",
-    "common-tg-service": "^1.0.27",
+    "common-tg-service": "^1.0.43",
     "https": "1.0.0",
     "imap": "0.8.19",
     "mongoose": "8.2.2",
