--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cloudinary": "2.0.3",
-    "common-tg-service": "^1.0.43",
+    "common-tg-service": "^1.0.44",
     "https": "1.0.0",
     "imap": "0.8.19",
     "mongoose": "8.2.2",
     "node-fetch": "2.7.0",
     "node-schedule-tz": "^1.2.1-4",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "7.8.1",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.0",
