--- a/package.json
+++ b/package.json
@@ -31,54 +31,41 @@
     "update-common": "rm -rf node_modules/commonService && npm install github:shruthie1/CommonTgService.git#dist --no-package-lock --no-save"
   },
   "dependencies": {
-    "@nestjs/common": "10.3.3",
-    "@nestjs/config": "3.2.0",
-    "@nestjs/core": "10.3.3",
-    "@nestjs/mongoose": "10.0.4",
-    "@nestjs/platform-express": "10.3.3",
-    "@nestjs/swagger": "8.0.0",
-    "adm-zip": "0.5.12",
-    "axios": "^1.8.4",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
-    "cloudinary": "2.0.3",
-    "common-tg-service": "^1.0.49",
-    "https": "1.0.0",
-    "imap": "0.8.19",
-    "mongoose": "8.2.2",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/swagger": "^11.2.0",
+    "adm-zip": "0.5.16",
+    "class-validator": "^0.14.2",
+    "cloudinary": "2.6.1",
+    "common-tg-service": "^1.1.6",
+    "mongoose": "^8.15.2",
     "node-fetch": "2.7.0",
-    "node-schedule-tz": "^1.2.1-4",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "7.8.1",
-    "swagger-jsdoc": "6.2.8",
-    "swagger-ui-express": "5.0.0",
-    "telegram": "2.19.10"
+    "node-schedule-tz": "^1.2.1-4"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.4.0",
-    "@nestjs/schematics": "10.1.1",
-    "@nestjs/testing": "10.3.3",
-    "@types/express": "4.17.21",
-    "@types/imap": "0.8.40",
-    "@types/jest": "29.5.12",
-    "@types/node": "20.11.28",
-    "@types/supertest": "6.0.2",
-    "@typescript-eslint/eslint-plugin": "7.2.0",
-    "@typescript-eslint/parser": "7.2.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "jest": "29.7.0",
-    "prettier": "3.2.5",
+    "@nestjs/cli": "11.0.7",
+    "@nestjs/schematics": "11.0.5",
+    "@nestjs/testing": "11.1.3",
+    "@types/express": "5.0.3",
+    "@types/imap": "0.8.42",
+    "@types/jest": "29.5.14",
+    "@types/node": "24.0.1",
+    "@types/supertest": "6.0.3",
+    "@typescript-eslint/eslint-plugin": "8.34.0",
+    "@typescript-eslint/parser": "8.34.0",
+    "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-plugin-prettier": "5.4.1",
+    "jest": "30.0.0",
+    "prettier": "3.5.3",
     "source-map-support": "0.5.21",
-    "supertest": "6.3.4",
-    "ts-jest": "29.1.2",
-    "ts-loader": "9.5.1",
+    "supertest": "7.1.1",
+    "ts-jest": "29.4.0",
+    "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.4.2",
-    "webpack": "5.90.3",
-    "webpack-cli": "5.1.4",
+    "typescript": "5.8.3",
+    "webpack": "5.99.9",
+    "webpack-cli": "6.0.1",
     "webpack-node-externals": "3.0.0"
   },
   "jest": {
