--- a/package.json
+++ b/package.json
@@ -31,29 +31,17 @@
     "update-common": "rm -rf node_modules/commonService && npm install github:shruthie1/CommonTgService.git#dist --no-package-lock --no-save"
   },
   "dependencies": {
-    "@nestjs/common": "10.3.3",
-    "@nestjs/config": "3.2.0",
-    "@nestjs/core": "10.3.3",
-    "@nestjs/mongoose": "10.0.4",
-    "@nestjs/platform-express": "10.3.3",
-    "@nestjs/swagger": "8.0.0",
-    "adm-zip": "0.5.12",
-    "axios": "1.6.8",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
-    "cloudinary": "2.0.3",
-    "common-tg-service": "^1.0.31",
-    "https": "1.0.0",
-    "imap": "0.8.19",
-    "mongoose": "8.2.2",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/swagger": "^11.2.0",
+    "adm-zip": "0.5.16",
+    "class-validator": "^0.14.2",
+    "cloudinary": "2.6.1",
+    "common-tg-service": "^1.1.6",
+    "mongoose": "^8.15.2",
     "node-fetch": "2.7.0",
-    "node-schedule-tz": "^1.2.1-4",
-    "rxjs": "7.8.1",
-    "swagger-jsdoc": "6.2.8",
-    "swagger-ui-express": "5.0.0",
-    "telegram": "2.19.10"
+    "node-schedule-tz": "^1.2.1-4"
   },
-  "devDependencies": {
+  "devvDependencies": {
     "@nestjs/cli": "10.4.0",
     "@nestjs/schematics": "10.1.1",
     "@nestjs/testing": "10.3.3",
