--- a/package.json
+++ b/package.json
@@ -41,31 +41,31 @@
     "node-fetch": "2.7.0",
     "node-schedule-tz": "^1.2.1-4"
   },
-  "devvDependencies": {
-    "@nestjs/cli": "10.4.0",
-    "@nestjs/schematics": "10.1.1",
-    "@nestjs/testing": "10.3.3",
-    "@types/express": "4.17.21",
-    "@types/imap": "0.8.40",
-    "@types/jest": "29.5.12",
-    "@types/node": "20.11.28",
-    "@types/supertest": "6.0.2",
-    "@typescript-eslint/eslint-plugin": "7.2.0",
-    "@typescript-eslint/parser": "7.2.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "jest": "29.7.0",
-    "prettier": "3.2.5",
+  "devDependencies": {
+    "@nestjs/cli": "11.0.7",
+    "@nestjs/schematics": "11.0.5",
+    "@nestjs/testing": "11.1.3",
+    "@types/express": "5.0.3",
+    "@types/imap": "0.8.42",
+    "@types/jest": "29.5.14",
+    "@types/node": "24.0.1",
+    "@types/supertest": "6.0.3",
+    "@typescript-eslint/eslint-plugin": "8.34.0",
+    "@typescript-eslint/parser": "8.34.0",
+    "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-plugin-prettier": "5.4.1",
+    "jest": "30.0.0",
+    "prettier": "3.5.3",
     "source-map-support": "0.5.21",
-    "supertest": "6.3.4",
-    "ts-jest": "29.1.2",
-    "ts-loader": "9.5.1",
+    "supertest": "7.1.1",
+    "ts-jest": "29.4.0",
+    "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.4.2",
-    "webpack": "5.90.3",
-    "webpack-cli": "5.1.4",
+    "typescript": "5.8.3",
+    "webpack": "5.99.9",
+    "webpack-cli": "6.0.1",
     "webpack-node-externals": "3.0.0"
   },
   "jest": {
