--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=16.0.0 <21.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "build": "npm update commonService && nest build",
@@ -42,7 +42,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "cloudinary": "2.7.0",
-    "common-tg-service": "^1.3.21",
+    "common-tg-service": "^1.3.32",
     "https": "1.0.0",
     "imap": "0.8.19",
     "mongoose": "8.18.1",
@@ -60,7 +60,7 @@
     "@types/express": "5.0.3",
     "@types/imap": "0.8.42",
     "@types/jest": "30.0.0",
-    "@types/node": "24.3.3",
+    "@types/node": "24.4.0",
     "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "8.43.0",
     "@typescript-eslint/parser": "8.43.0",
