--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=16.0.0 <21.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "build": "npm update commonService && nest build",
@@ -36,7 +36,7 @@
     "adm-zip": "0.5.16",
     "class-validator": "^0.14.2",
     "cloudinary": "2.7.0",
-    "common-tg-service": "^1.3.21",
+    "common-tg-service": "^1.3.32",
     "mongoose": "^8.18.1",
     "node-fetch": "2.7.0",
     "node-schedule-tz": "^1.2.1-4"
@@ -48,7 +48,7 @@
     "@types/express": "5.0.3",
     "@types/imap": "0.8.42",
     "@types/jest": "30.0.0",
-    "@types/node": "24.3.3",
+    "@types/node": "24.4.0",
     "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "8.43.0",
     "@typescript-eslint/parser": "8.43.0",
